cluster-2/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-pineapple
  labels:
    app: helloworld-pineapple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-pineapple
  template:
    metadata:
      labels:
        app: helloworld-pineapple
    spec:
      containers:
      - name: helloworld
        image: strm/helloworld-http
        ports:
        - containerPort: 80
