cluster-2/06-service-cluster-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-cluster-2
spec:
  type: ExternalName
  externalName: proxy.cluster-2.helloworld.dev.nexmo.cloud
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
