cluster-2/04-ingress-cluster.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-pineapple-cluster
  annotations:
    kubernetes.io/ingress.class: ingress-controller-public-nginx
spec:
  rules:
    - host: pineapple.cluster-2.helloworld.dev.nexmo.cloud
      http:
        paths:
          - backend:
              serviceName: helloworld-pineapple
              servicePort: 80
